--- a/static/index.html
+++ b/static/index.html
@@ -15,19 +15,17 @@
          <img src="logo.gif" alt="Logo">
       </div>
       <div id="content">
-         <h1>Search the Web and use the BEST static proxy!</h1>
+         <h1>Catsploit V2 Proxy</h1>
+         <p>(This is a Static Proxy!)</p>
 
          <form id="uv-form"">
-            <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
-            <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
+            <input id="uv-search-engine" value="https://duckduckgo.com/?t=h_&q=" type="hidden"/> 
+            <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
           </form>
           <div class="desc left-margin">
             <p id="uv-error"></p>
             <pre id="uv-error-code"></pre>
           </div>
-         <a href="https://discord.gg/zJhPJYJCeJ" target="_blank" class="fa-brands fa-discord"></a>
-         <a href="https://github.com/TheTIW/UV-Static" target="_blank"class="fa-brands fa-github"></a>
-         <a href="https://starttiw.org" target="_blank"class="fa-solid fa-cloud"></a>
       </div>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
@@ -35,8 +33,5 @@
       <script src="search.js" defer></script>
       <script src="index.js" defer></script>
       <script src="error.js" defer></script>
-      <div id="footer">
-         <p>&copy; 2023 TIW. All rights reserved.</p>
-      </div>
    </body>
 </html>
