--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
    </head>
    <body>
       <div id="header">
-         <img src="logo.gif" alt="Logo">
+         <img src="favicon.ico" alt="Logo">
       </div>
       <div id="content">
          <h1>Catsploit V2 Proxy</h1>
