--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,7 @@
             <p id="uv-error"></p>
             <pre id="uv-error-code"></pre>
           </div>
+            <script src="stars.js"></script>
       </div>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
