--- a/static/index.html
+++ b/static/index.html
@@ -7,27 +7,27 @@
       <script type="text/javascript" src="//counter.websiteout.net/js/7/10/5/0"></script>
       <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
    </head>
    <body>
       <div id="header">
-         <img src="favicon.ico" alt="Logo">
+         <img src="logo.gif" alt="Logo">
       </div>
       <div id="content">
          <h1>Catsploit V2 Proxy</h1>
          <p>(This is a Static Proxy!)</p>
 
          <form id="uv-form"">
-            <input id="uv-search-engine" value="https://duckduckgo.com/?t=h_&q=" type="hidden"/> 
-            <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
+            <input id="uv-search-engine" value="http://google.com/search?q=" type="hidden"/> 
+            <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
           </form>
           <div class="desc left-margin">
             <p id="uv-error"></p>
             <pre id="uv-error-code"></pre>
           </div>
-            <script src="stars.js"></script>
       </div>
+      <script src="stars.js"></script>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
       <script src="register-sw.js" defer></script>
