--- a/static/index.html
+++ b/static/index.html
@@ -27,12 +27,11 @@
             <pre id="uv-error-code"></pre>
           </div>
       </div>
-      <script src="stars.js"></script>
+      <script src="stars.js" defer></script>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
       <script src="register-sw.js" defer></script>
       <script src="search.js" defer></script>
       <script src="index.js" defer></script>
-      <script src="error.js" defer></script>
    </body>
 </html>
