--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,6 @@
       <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
    </head>
    <body>
       <div id="header">
@@ -19,8 +18,8 @@
          <p>(This is a Static Proxy!)</p>
 
          <form id="uv-form"">
-            <input id="uv-search-engine" value="http://google.com/search?q=" type="hidden"/> 
-            <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
+            <input id="uv-search-engine" value="https://html.duckduckgo.com/html?t=h_&q=" type="hidden"/> 
+            <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
           </form>
           <div class="desc left-margin">
             <p id="uv-error"></p>
