--- a/static/index.html
+++ b/static/index.html
@@ -18,8 +18,8 @@
          <p>(This is a Static Proxy!)</p>
 
          <form id="uv-form"">
-            <input id="uv-search-engine" value="https://www.google.cat/search?q=" type="hidden"/> 
-            <input id="uv-address" type="text" placeholder="Search google.cat or type an URL" class="form__input"/>
+            <input id="uv-search-engine" value="https://html.duckduckgo.com/html?t=h_&q=" type="hidden"/> 
+            <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
           </form>
           <div class="desc left-margin">
             <p id="uv-error"></p>
