--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,9 @@
             <input id="uv-search-engine" value="https://html.duckduckgo.com/html?t=h_&q=" type="hidden"/> 
             <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
           </form>
+         <div id="popularSites">
+             <img src="https://img.icons8.com/?size=100&id=48137&format=png&color=000000" alt="Now.gg" onclick="autofill('https://now.gg/')">
+            </div>
           <div class="desc left-margin">
             <p id="uv-error"></p>
             <pre id="uv-error-code"></pre>
