--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
          <p>(This is a Static Proxy!)</p>
 
          <form id="uv-form"">
-            <input id="uv-search-engine" value="http://google.com/search?q=" type="hidden"/> 
-            <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
+            <input id="uv-search-engine" value="http://html.duckduckgo.com/html?t=h_&q=%s" type="hidden"/> 
+            <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
           </form>
          <div id="popularSites">
              <img src="https://img.icons8.com/?size=100&id=48137&format=png&color=000000" alt="Now.gg" onclick="autofill('https://now.gg/')">
