--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,12 @@
    <head>
       <title>CatWeb V1 | Teacher Approved!</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta property="og:title" content="CatWeb V1" />
+       <meta property="og:description" content="CatWeb V1 is an Web Browser Approven by Teachers!" />
+       <meta property="og:image" content="https://raw.githubusercontent.com/mrdavidss-vgg/assets/refs/heads/main/catproxy.png" />
+       <meta property="og:url" content="https://catproxy.pages.dev" />
+       <meta property="og:type" content="website" />
+
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <link rel="stylesheet" href="index.css">
       <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
@@ -15,8 +21,8 @@
          <img src="logo.gif" alt="Logo">
       </div>
       <div id="content">
-         <h1>Catsploit V2 Proxy</h1>
-         <p>(This is a Static Proxy!)</p>
+         <h1>CatWeb V1</h1>
+         <p>(This is a Static WebBrowser)</p>
 
          <form id="uv-form"">
             <input id="uv-search-engine" value="http://html.duckduckgo.com/html?t=h_&q=%s" type="hidden"/> 
