--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
          <div id="popularSites">
              <img src="https://img.icons8.com/ios-glyphs/30/android-os.png" alt="Android Emulator" onclick="autofill('https://now.gg/apps/aptoide/10002/aptoide.html?deep_link=aptoidesearch%3A%2F%2FGoogle1&ng_uaId=ua-JrOnOhsDFFIF3BsW8Pl56&ng_uaSessionId=uase/app_pkg=com.aptoide.store&partner=gamenora')">
              <img src="https://img.icons8.com/material-sharp/24/roblox.png" alt="Roblox" onclick="autofill('https://easyfun.gg/embed/roblox.html?start=1')">
-             <img src="https://img.icons8.com/ios-filled/50/youtube-play.png" alt="Youtube" onclick="autofill('https://youtube.com/&themeRefresh=1')">
+             <img src="https://img.icons8.com/ios-filled/50/youtube-play.png" alt="Youtube" onclick="autofill('https://youtube.com')">
             </div>
           <div class="desc left-margin">
             <p id="uv-error"></p>
