--- a/static/index.html
+++ b/static/index.html
@@ -29,9 +29,8 @@
             <input id="uv-address" type="text" placeholder="Search DuckDuckGo or type an URL" class="form__input"/>
           </form>
          <div id="popularSites">
-             <img src="https://img.icons8.com/ios-glyphs/5B8BE0/android-os.png" alt="Now.gg" onclick="autofill('https://now.gg/apps/aptoide/10002/aptoide.html?deep_link=aptoidesearch%3A%2F%2FGoogle1&ng_uaId=ua-JrOnOhsDFFIF3BsW8Pl56&ng_uaSessionId=uase/app_pkg=com.aptoide.store&partner=gamenora')">
-             <img src="https://img.icons8.com/ios-filled/5B8BE0/youtube-play.png" alt="Invidious (no spyware youtube)" onclick="autofill('https://inv.nadeko.net/feed/popular')">
-             <img src="https://img.icons8.com/ios-glyphs/5B8BE0/chatgpt.png" alt="ChatGPT" onclick="autofill('https://chatgpt.com')">
+             <img src="https://img.icons8.com/ios-glyphs/5B8BE0/android-os.png" alt="Android Emulator" onclick="autofill('https://now.gg/apps/aptoide/10002/aptoide.html?deep_link=aptoidesearch%3A%2F%2FGoogle1&ng_uaId=ua-JrOnOhsDFFIF3BsW8Pl56&ng_uaSessionId=uase/app_pkg=com.aptoide.store&partner=gamenora')">
+             <img src="https://img.icons8.com/ios-filled/5B8BE0/youtube-play.png" alt="Invidious" onclick="autofill('https://inv.nadeko.net/feed/popular')">
             </div>
           <div class="desc left-margin">
             <p id="uv-error"></p>
