--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
       <div id="content">
          <h1>CatWeb V1</h1>
          <p>(This is a Static WebBrowser)</p>
+         <p>Made with ❤️ By the Catsploit Developer. (CatDev or CDev!)</p>
 
          <form id="uv-form"">
             <input id="uv-search-engine" value="http://html.duckduckgo.com/html?t=h_&q=%s" type="hidden"/> 
